--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,6 +42,16 @@ android {
         main.java.srcDirs += 'src/main/kotlin'
     }
 
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi', 'armeabi-v7a', 'mips', 'mips64', 'arm64-v8a'
+            universalApk true
+        }
+    }
+
+
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.example.battery_stats"
@@ -60,6 +70,7 @@ android {
             signingConfig signingConfigs.debug
         }
     }
+    buildToolsVersion '30.0.2'
 }
 
 flutter {
